load("//private/chisel:defs.bzl", "chisel_slice")

chisel_slice(
    name = "autoconf",
    src = "autoconf.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:debianutils",
        "//chisel-release/slices:m4",
        "//chisel-release/slices:perl",
    ],
)

chisel_slice(
    name = "automake",
    src = "automake.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:autoconf",
        "//chisel-release/slices:autotools-dev",
    ],
)

chisel_slice(
    name = "autotools-dev",
    src = "autotools-dev.yaml",
    slice = "bin",
)

chisel_slice(
    name = "base-files",
    src = "base-files.yaml",
    slice = "base",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "base-passwd",
    src = "base-passwd.yaml",
    slice = "data",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "bash_bin",
    package_name = "bash",
    src = "bash.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libtinfo6",
    ],
)

chisel_slice(
    name = "bash_posix",
    package_name = "bash",
    src = "bash.yaml",
    slice = "posix",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "binutils-x86-64-linux-gnu",
    src = "binutils-x86-64-linux-gnu.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:libbinutils",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libctf-nobfd0",
        "//chisel-release/slices:libctf0",
        "//chisel-release/slices:libgcc-s1",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "binutils",
    src = "binutils.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:binutils-x86-64-linux-gnu",
        "//chisel-release/slices:libbinutils",
    ],
)

chisel_slice(
    name = "ca-certificates",
    src = "ca-certificates.yaml",
    slice = "data",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "coreutils",
    src = "coreutils.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libacl1",
        "//chisel-release/slices:libattr1",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
        "//chisel-release/slices:libselinux1",
    ],
)

chisel_slice(
    name = "cpp-13-x86-64-linux-gnu",
    src = "cpp-13-x86-64-linux-gnu.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
        "//chisel-release/slices:libisl23",
        "//chisel-release/slices:libmpc3",
        "//chisel-release/slices:libmpfr6",
        "//chisel-release/slices:libzstd1",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "cpp-13",
    src = "cpp-13.yaml",
    slice = "bin",
    deps = ["//chisel-release/slices:cpp-13-x86-64-linux-gnu"],
)

chisel_slice(
    name = "cpp",
    src = "cpp.yaml",
    slice = "bin",
    deps = ["//chisel-release/slices:cpp-13"],
)

chisel_slice(
    name = "curl",
    src = "curl.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libcurl4t64",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "debianutils",
    src = "debianutils.yaml",
    slice = "bin",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "dpkg",
    src = "dpkg.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:libbz2-1.0",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:liblzma5",
        "//chisel-release/slices:libselinux1",
        "//chisel-release/slices:libzstd1",
        "//chisel-release/slices:tar",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "findutils",
    src = "findutils.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libselinux1",
    ],
)

chisel_slice(
    name = "fontconfig-config",
    src = "fontconfig-config.yaml",
    slice = "config",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:fonts-dejavu-core_config",
        "//chisel-release/slices:fonts-dejavu-core_fonts",
    ],
)

chisel_slice(
    name = "fonts-dejavu-core_fonts",
    package_name = "fonts-dejavu-core",
    src = "fonts-dejavu-core.yaml",
    slice = "fonts",
)

chisel_slice(
    name = "fonts-dejavu-core_config",
    package_name = "fonts-dejavu-core",
    src = "fonts-dejavu-core.yaml",
    slice = "config",
)

chisel_slice(
    name = "g++-13-x86-64-linux-gnu",
    src = "g++-13-x86-64-linux-gnu.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:gcc-13-x86-64-linux-gnu",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
        "//chisel-release/slices:libisl23",
        "//chisel-release/slices:libmpc3",
        "//chisel-release/slices:libmpfr6",
        "//chisel-release/slices:libstdc++-13-dev",
        "//chisel-release/slices:libzstd1",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "g++-13",
    src = "g++-13.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:g++-13-x86-64-linux-gnu",
        "//chisel-release/slices:gcc-13",
    ],
)

chisel_slice(
    name = "g++",
    src = "g++.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:cpp",
        "//chisel-release/slices:g++-13",
        "//chisel-release/slices:gcc",
        "//chisel-release/slices:gcc-13",
    ],
)

chisel_slice(
    name = "gcc-13-x86-64-linux-gnu",
    src = "gcc-13-x86-64-linux-gnu.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:binutils-x86-64-linux-gnu",
        "//chisel-release/slices:cpp-13-x86-64-linux-gnu",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libcc1-0",
        "//chisel-release/slices:libgcc-13-dev",
        "//chisel-release/slices:libgcc-s1",
        "//chisel-release/slices:libgmp10",
        "//chisel-release/slices:libisl23",
        "//chisel-release/slices:libmpc3",
        "//chisel-release/slices:libmpfr6",
        "//chisel-release/slices:libstdc++6",
        "//chisel-release/slices:libzstd1",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "gcc-13",
    src = "gcc-13.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:binutils",
        "//chisel-release/slices:gcc-13-x86-64-linux-gnu",
    ],
)

chisel_slice(
    name = "gcc",
    src = "gcc.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:cpp",
        "//chisel-release/slices:gcc-13",
    ],
)

chisel_slice(
    name = "git",
    src = "git.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libcurl3t64-gnutls",
        "//chisel-release/slices:liberror-perl",
        "//chisel-release/slices:libexpat1",
        "//chisel-release/slices:libpcre2-8-0",
        "//chisel-release/slices:perl",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "grep",
    src = "grep.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libpcre3",
    ],
)

chisel_slice(
    name = "gzip",
    src = "gzip.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libacl1",
    src = "libacl1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libasan6",
    src = "libasan6.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgcc-s1",
    ],
)

chisel_slice(
    name = "libatomic1",
    src = "libatomic1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libattr1",
    src = "libattr1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libbinutils",
    src = "libbinutils.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libblkid1",
    src = "libblkid1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libbrotli1",
    src = "libbrotli1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libbz2-1.0",
    src = "libbz2-1.0.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libc6-dev",
    src = "libc6-dev.yaml",
    slice = "devel",
)

chisel_slice(
    name = "libc6",
    src = "libc6.yaml",
    slice = "libs",
)

chisel_slice(
    name = "libcc1-0",
    src = "libcc1-0.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgcc-s1",
        "//chisel-release/slices:libstdc++6",
    ],
)

chisel_slice(
    name = "libcom-err2",
    src = "libcom-err2.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libcrypt1",
    src = "libcrypt1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libctf-nobfd0",
    src = "libctf-nobfd0.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libctf0",
    src = "libctf0.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libbinutils",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libcurl3t64-gnutls",
    src = "libcurl3t64-gnutls.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libbrotli1",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgnutls30t64",
        "//chisel-release/slices:libgssapi-krb5-2",
        "//chisel-release/slices:libidn2-0",
        "//chisel-release/slices:libldap2",
        "//chisel-release/slices:libnettle8t64",
        "//chisel-release/slices:libnghttp2-14",
        "//chisel-release/slices:libpsl5t64",
        "//chisel-release/slices:librtmp1",
        "//chisel-release/slices:libssh-4",
        "//chisel-release/slices:libzstd1",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libcurl4t64",
    src = "libcurl4t64.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libbrotli1",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgssapi-krb5-2",
        "//chisel-release/slices:libidn2-0",
        "//chisel-release/slices:libldap2",
        "//chisel-release/slices:libnghttp2-14",
        "//chisel-release/slices:libpsl5t64",
        "//chisel-release/slices:librtmp1",
        "//chisel-release/slices:libssh-4",
        "//chisel-release/slices:libssl3t64",
        "//chisel-release/slices:libzstd1",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libdb5.3t64",
    src = "libdb5.3t64.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libdpkg-perl",
    src = "libdpkg-perl.yaml",
    slice = "libs",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:dpkg",
        "//chisel-release/slices:perl",
    ],
)

chisel_slice(
    name = "liberror-perl",
    src = "liberror-perl.yaml",
    slice = "libs",
)

chisel_slice(
    name = "libexpat1",
    src = "libexpat1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libffi8",
    src = "libffi8.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libgcc-13-dev",
    src = "libgcc-13-dev.yaml",
    slice = "devel",
    deps = [
        "//chisel-release/slices:libasan6",
        "//chisel-release/slices:libatomic1",
        "//chisel-release/slices:libgcc-s1",
        "//chisel-release/slices:libgomp1",
        "//chisel-release/slices:libitm1",
        "//chisel-release/slices:liblsan0",
        "//chisel-release/slices:libtsan0",
        "//chisel-release/slices:libubsan1",
    ],
)

chisel_slice(
    name = "libgcc-s1",
    src = "libgcc-s1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libgdbm-compat4t64",
    src = "libgdbm-compat4t64.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgdbm6t64",
    ],
)

chisel_slice(
    name = "libgdbm6t64",
    src = "libgdbm6t64.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libglib2.0-0t64",
    src = "libglib2.0-0t64.yaml",
    slice = "libs",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libffi8",
        "//chisel-release/slices:libmount1",
        "//chisel-release/slices:libpcre3",
        "//chisel-release/slices:libselinux1",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libgmp10",
    src = "libgmp10.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libgnutls30t64",
    src = "libgnutls30t64.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
        "//chisel-release/slices:libhogweed6t64",
        "//chisel-release/slices:libidn2-0",
        "//chisel-release/slices:libnettle8t64",
        "//chisel-release/slices:libp11-kit0",
        "//chisel-release/slices:libtasn1-6",
        "//chisel-release/slices:libunistring5",
    ],
)

chisel_slice(
    name = "libgomp1",
    src = "libgomp1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libgssapi-krb5-2",
    src = "libgssapi-krb5-2.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libcom-err2",
        "//chisel-release/slices:libk5crypto3",
        "//chisel-release/slices:libkrb5-3",
        "//chisel-release/slices:libkrb5support0",
    ],
)

chisel_slice(
    name = "libhogweed6t64",
    src = "libhogweed6t64.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
        "//chisel-release/slices:libnettle8t64",
    ],
)

chisel_slice(
    name = "libhwasan0",
    src = "libhwasan0.yaml",
    slice = "libs",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgcc-s1",
    ],
)

chisel_slice(
    name = "libidn2-0",
    src = "libidn2-0.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libunistring5",
    ],
)

chisel_slice(
    name = "libisl23",
    src = "libisl23.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
    ],
)

chisel_slice(
    name = "libitm1",
    src = "libitm1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libk5crypto3",
    src = "libk5crypto3.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libkrb5support0",
    ],
)

chisel_slice(
    name = "libkeyutils1",
    src = "libkeyutils1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libkrb5-3",
    src = "libkrb5-3.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libcom-err2",
        "//chisel-release/slices:libk5crypto3",
        "//chisel-release/slices:libkeyutils1",
        "//chisel-release/slices:libkrb5support0",
        "//chisel-release/slices:libssl3t64",
    ],
)

chisel_slice(
    name = "libkrb5support0",
    src = "libkrb5support0.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libldap2",
    src = "libldap2.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgnutls30t64",
        "//chisel-release/slices:libsasl2-2",
    ],
)

chisel_slice(
    name = "liblsan0",
    src = "liblsan0.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgcc-s1",
    ],
)

chisel_slice(
    name = "liblzma5",
    src = "liblzma5.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libmount1",
    src = "libmount1.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libblkid1",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libselinux1",
    ],
)

chisel_slice(
    name = "libmpc3",
    src = "libmpc3.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
        "//chisel-release/slices:libmpfr6",
    ],
)

chisel_slice(
    name = "libmpfr6",
    src = "libmpfr6.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
    ],
)

chisel_slice(
    name = "libncursesw6",
    src = "libncursesw6.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libtinfo6",
    ],
)

chisel_slice(
    name = "libnettle8t64",
    src = "libnettle8t64.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libnghttp2-14",
    src = "libnghttp2-14.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libp11-kit0",
    src = "libp11-kit0.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libffi8",
    ],
)

chisel_slice(
    name = "libpcre2-8-0",
    src = "libpcre2-8-0.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libpcre3",
    src = "libpcre3.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libperl5.38t64",
    src = "libperl5.38t64.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libbz2-1.0",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libcrypt1",
        "//chisel-release/slices:libdb5.3t64",
        "//chisel-release/slices:libgdbm-compat4t64",
        "//chisel-release/slices:libgdbm6t64",
        "//chisel-release/slices:perl-modules-5.38",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libpkgconf3",
    src = "libpkgconf3.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libpsl5t64",
    src = "libpsl5t64.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libidn2-0",
        "//chisel-release/slices:libunistring5",
    ],
)

chisel_slice(
    name = "libpython3.12-minimal",
    src = "libpython3.12-minimal.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libssl3t64",
    ],
)

chisel_slice(
    name = "libpython3.12-stdlib",
    src = "libpython3.12-stdlib.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libbz2-1.0",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libcrypt1",
        "//chisel-release/slices:libdb5.3t64",
        "//chisel-release/slices:libffi8",
        "//chisel-release/slices:liblzma5",
        "//chisel-release/slices:libncursesw6",
        "//chisel-release/slices:libpython3.12-minimal",
        "//chisel-release/slices:libreadline8t64",
        "//chisel-release/slices:libsqlite3-0",
        "//chisel-release/slices:libtinfo6",
    ],
)

chisel_slice(
    name = "libreadline8t64",
    src = "libreadline8t64.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libtinfo6",
    ],
)

chisel_slice(
    name = "librtmp1",
    src = "librtmp1.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgmp10",
        "//chisel-release/slices:libgnutls30t64",
        "//chisel-release/slices:libhogweed6t64",
        "//chisel-release/slices:libnettle8t64",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libsasl2-2",
    src = "libsasl2-2.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libsasl2-modules-db",
    ],
)

chisel_slice(
    name = "libsasl2-modules-db",
    src = "libsasl2-modules-db.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libdb5.3t64",
    ],
)

chisel_slice(
    name = "libselinux1",
    src = "libselinux1.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libpcre2-8-0",
    ],
)

chisel_slice(
    name = "libsigsegv2",
    src = "libsigsegv2.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libsqlite3-0",
    src = "libsqlite3-0.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libssh-4",
    src = "libssh-4.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgssapi-krb5-2",
        "//chisel-release/slices:libssl3t64",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "libssl3t64",
    src = "libssl3t64.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libstdc++6",
    src = "libstdc++6.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgcc-s1",
    ],
)

chisel_slice(
    name = "libtasn1-6",
    src = "libtasn1-6.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libtinfo6",
    src = "libtinfo6.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libtsan0",
    src = "libtsan0.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgcc-s1",
    ],
)

chisel_slice(
    name = "libubsan1",
    src = "libubsan1.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libgcc-s1",
        "//chisel-release/slices:libstdc++6",
    ],
)

chisel_slice(
    name = "libunistring5",
    src = "libunistring5.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "libunwind8",
    src = "libunwind8.yaml",
    slice = "libs",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:liblzma5",
    ],
)

chisel_slice(
    name = "libzstd1",
    src = "libzstd1.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "linux-libc-dev",
    src = "linux-libc-dev.yaml",
    slice = "devel",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "m4",
    src = "m4.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libsigsegv2",
    ],
)

chisel_slice(
    name = "mawk",
    src = "mawk.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "netbase",
    src = "netbase.yaml",
    slice = "etc",
)

chisel_slice(
    name = "patch",
    src = "patch.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = ["//chisel-release/slices:libc6"],
)

chisel_slice(
    name = "perl-base",
    src = "perl-base.yaml",
    slice = "base",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libcrypt1",
    ],
)

chisel_slice(
    name = "perl-modules-5.38",
    src = "perl-modules-5.38.yaml",
    slice = "modules",
    deps = ["//chisel-release/slices:perl-base"],
)

chisel_slice(
    name = "perl",
    src = "perl.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:libperl5.38t64",
        "//chisel-release/slices:netbase",
        "//chisel-release/slices:perl-base",
        "//chisel-release/slices:perl-modules-5.38",
    ],
)

chisel_slice(
    name = "pkgconf-bin",
    src = "pkgconf-bin.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libpkgconf3",
    ],
)

chisel_slice(
    name = "pkgconf",
    src = "pkgconf.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = ["//chisel-release/slices:pkgconf-bin"],
)

chisel_slice(
    name = "python3-distutils",
    src = "python3-distutils.yaml",
    slice = "libs",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:python3.12-minimal",
        "//chisel-release/slices:python3-lib2to3",
    ],
)

chisel_slice(
    name = "python3-lib2to3",
    src = "python3-lib2to3.yaml",
    slice = "libs",
)

chisel_slice(
    name = "python3.12-minimal",
    src = "python3.12-minimal.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libexpat1",
        "//chisel-release/slices:libpython3.12-minimal",
        "//chisel-release/slices:libpython3.12-stdlib",
        "//chisel-release/slices:zlib1g",
    ],
)

chisel_slice(
    name = "sed",
    src = "sed.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libacl1",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libselinux1",
    ],
)

chisel_slice(
    name = "strace",
    src = "strace.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
    deps = [
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libunwind8",
    ],
)

chisel_slice(
    name = "tar",
    src = "tar.yaml",
    slice = "bin",
    deps = [
        "//chisel-release/slices:libacl1",
        "//chisel-release/slices:libc6",
        "//chisel-release/slices:libselinux1",
    ],
)

chisel_slice(
    name = "tzdata",
    src = "tzdata.yaml",
    slice = "zoneinfo",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "unzip",
    src = "unzip.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "zip",
    src = "zip.yaml",
    slice = "bin",
    visibility = ["//visibility:public"],
)

chisel_slice(
    name = "zlib1g",
    src = "zlib1g.yaml",
    slice = "libs",
    deps = ["//chisel-release/slices:libc6"],
)
